# RocketML

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/compose/: docker-compose.yml
deploy/helm/rocketml/: Chart.yaml  values.yaml
deploy/helm/rocketml/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  httproute.yaml  service.yaml  serviceaccount.yaml
deploy/k8s/: servicemonitor.yaml
docs/decisions/: 0001-model-and-serving.md  0002-ci-design.md  0003-helm-k8s.md
model/: train.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: rocketml.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: fire_traffic.py
serving/: Dockerfile
serving/app/: __init__.py  config.py  main.py  model_loader.py  preprocessing.py  schemas.py
serving/tests/: conftest.py  test_api.py
