[project]
name = "ml-serving-platform"
version = "0.1.0"
description = "RocketML -- a self-service platform that serves NLP text classifiers as containerised, monitored inference APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "mlflow>=3.13.0",
    "prometheus-client>=0.25.0",
    "uvicorn>=0.49.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = ["serving"]
testpaths = ["serving/tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
